--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -50,6 +50,12 @@
     font-weight: 600;
     padding: 17px 26px;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
+}
+
+.contactBtn:hover {
+    opacity: 0.6; /* Adjust the value as needed */
 }
 
 .heroImg{
