--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -67,8 +67,8 @@
         background: rgb(25, 55, 109);
         background: linear-gradient(
             0deg, 
-            rgba(25, 55, 109, 0.2) 0%, 
-            rgba(25, 55, 109, 1) 100%
+            #19376d 0%, 
+            rgba(25, 55, 109, 0.5) 100%
         );
         padding: 24px 33px;
         box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
